@@ -1,0 +1,1 @@
+View for Inner action 2
